--- a/Render/Files/style1.css
+++ b/Render/Files/style1.css
@@ -1,13 +1,65 @@
-
-.oxi-tabs-ultimate-template-1 .oxi-tabs-ultimate-header .oxi-tabs-header-li{
-    border-color: #fff;
-}
 .oxi-tabs-ultimate-template-1 .oxi-tabs-header-li:last-of-type{
     border-right: none !important;
-}
+    border-bottom: none !important;
+}  
 
-@media only screen and (max-width: 993px) {
-    .oxi-tabs-ultimate-template-1 .oxi-tabs-header-li{
-       border-right: none !important;
+@media only screen and (min-width: 994px) {
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal .oxi-tabs-header-li{
+        border-bottom: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+}
+@media only screen and (min-width: 769px) and (max-width: 993px) {
+    .oxi-tabs-ultimate-template-1.oxi-tabs-heading-responsive-dynamic .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-column-column .oxi-tabs-header-li,
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-column-compact .oxi-tabs-header-li{
+        border-bottom: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-column-row .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    
+    
+    
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-column.oxi-tabs-header-vertical-tabs-alignment-column-compact .oxi-tabs-header-li,
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-column.oxi-tabs-header-vertical-tabs-alignment-column-column .oxi-tabs-header-li{
+        border-bottom: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-column.oxi-tabs-header-vertical-tabs-alignment-column-row .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-row .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+
+
+}
+@media only screen and (max-width: 768px) {
+    .oxi-tabs-ultimate-template-1.oxi-tabs-heading-responsive-dynamic .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-column-column .oxi-tabs-header-li,
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-column-compact .oxi-tabs-header-li{
+        border-bottom: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-column-row .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    
+    
+    
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-mobile-alignment-column.oxi-tabs-header-vertical-mobile-alignment-column-column .oxi-tabs-header-li,
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-mobile-alignment-column.oxi-tabs-header-vertical-mobile-alignment-column-compact .oxi-tabs-header-li{
+        border-bottom: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-mobile-alignment-column.oxi-tabs-header-vertical-mobile-alignment-column-row .oxi-tabs-header-li{
+        border-right: none !important;
+    }
+    .oxi-tabs-ultimate-template-1.oxi-tab-header-vertical.oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-mobile-alignment-row .oxi-tabs-header-li{
+        border-right: none !important;
     }
 }
