--- a/Render/Files/style4.css
+++ b/Render/Files/style4.css
@@ -408,3 +408,14 @@
     }
     
 }
+
+.oxi-tabs-ultimate-template-4 .oxi-tabs-body-content-shape{
+    width: 100%;
+    display: flex;
+}
+
+.oxi-tabs-ultimate-template-4 .oxi-tabs-body-content-shape span{
+    padding: 0 0 0 0 ;
+    margin: 0 0 0 0;
+    max-width: 100%;
+}
