--- a/Assets/Backend/css/notice.css
+++ b/Assets/Backend/css/notice.css
@@ -93,12 +93,9 @@ and open the template in the editor.
     padding-left: 0;
 }
 
-
 .oxi-addons-admin-notifications {
     position: relative;
-    width: 100%;
-    float: left;
-    margin: 20px 0;
+    margin-top: 50px;
     padding: 20px 20px 0;
     border: 1px solid #e5e5e5;
     background-color: #fdfdfd;
