--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -408,9 +408,9 @@
     display: block;
 }
 
-.oxi-tabs-ultimate-style .oxi-tabs-body-tabs p{
+/*.oxi-tabs-ultimate-style .oxi-tabs-body-tabs p{
     margin: 0 0 0 0 ;
-}
+}*/
 
 .oxi-tabs-comment{
     width: 100%;
