--- a/Render/Files/style18.css
+++ b/Render/Files/style18.css
@@ -1,3 +1,7 @@
+.oxi-tabs-ultimate-template-18 .oxi-tabs-ultimate-content-wrap {
+    z-index: 1;
+}
+
 .oxi-tabs-ultimate-template-18.oxi-tabs-ultimate-style .oxi-tabs-ultimate-header{
     overflow: visible;
 }
