--- a/Render/Files/style11.css
+++ b/Render/Files/style11.css
@@ -14,3 +14,7 @@
         max-width: 100%;
     }
 }
+
+.oxi-tabs-ultimate-style.oxi-tabs-ultimate-template-11 .oxi-tabs-ultimate-header{
+    overflow: visible;
+}
