--- a/Render/Files/style17.css
+++ b/Render/Files/style17.css
@@ -54,8 +54,9 @@
         border-left-color: transparent !important;
         border-right-color: transparent !important;
         border-bottom: none !important;
-        left: 50%;
-        bottom: 0;
+        left: 50% !important;
+        top: auto !important;
+        right: auto !important;
         transform: translateX(-50%)translateY(100%);
     }
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal.oxi-tab-header-bottom-left-position .oxi-tabs-header-triangle-shape,
@@ -65,8 +66,9 @@
         border-left-color: transparent !important;
         border-right-color: transparent !important;
         border-top: none !important;
-        left: 50%;
-        top: 0;
+        left: 50% !important;
+        bottom: auto !important;
+        right: auto !important;
         transform: translateX(-50%) translateY(-100%);
     }
     .oxi-tabs-ultimate-template-17.oxi-tab-header-vertical.oxi-tab-header-left-top-position .oxi-tabs-header-triangle-shape,
@@ -75,8 +77,9 @@
         border-top-color: transparent !important;
         border-bottom-color: transparent !important;
         border-right: none !important;
-        right: 0;
-        top: 50%;
+        bottom: auto !important;
+        left: auto !important;
+        top: 50% !important;
         transform: translateX(100%) translateY(-50%);
     }
     .oxi-tabs-ultimate-template-17.oxi-tab-header-vertical.oxi-tab-header-right-right-position .oxi-tabs-header-triangle-shape,
@@ -85,8 +88,9 @@
         border-top-color: transparent !important;
         border-bottom-color: transparent !important;
         border-left: none !important;
-        left: 0;
-        top: 50%;
+        bottom: auto !important;
+        right: auto !important;
+        top: 50% !important;
         transform:translateX(-100%) translateY(-50%);
     }
 }
@@ -98,7 +102,7 @@
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-compact .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-vertical .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-vertical .oxi-tabs-header-li{
-         border-top: none !important;
+        border-top: none !important;
         border-left: none !important;
         border-right: none !important;
     }
@@ -108,7 +112,7 @@
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-compact .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-vertical .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-vertical .oxi-tabs-header-li{
-         border-bottom: none !important;
+        border-bottom: none !important;
         border-left: none !important;
         border-right: none !important;
     }
@@ -127,7 +131,7 @@
     }
     .oxi-tabs-ultimate-template-17.oxi-tab-header-vertical[class^='oxi-tab-header-right-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-vertical .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-vertical[class*=' oxi-tab-header-right-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-vertical-tabs-alignment-vertical .oxi-tabs-header-li{
-       border-top: none !important;
+        border-top: none !important;
         border-bottom: none !important;
         border-right: none !important;
     }
@@ -204,17 +208,17 @@
         transform:translateX(-100%) translateY(-50%);
     }
 
-   
+
 }
 @media only screen and (max-width: 768px) {
-     .oxi-tabs-ultimate-template-17.oxi-tabs-heading-responsive-dynamic .oxi-tabs-header-li,
+    .oxi-tabs-ultimate-template-17.oxi-tabs-heading-responsive-dynamic .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-horizontal .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-horizontal .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-compact .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-compact .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-vertical .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-top-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-vertical .oxi-tabs-header-li{
-         border-top: none !important;
+        border-top: none !important;
         border-left: none !important;
         border-right: none !important;
     }
@@ -224,7 +228,7 @@
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-compact .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class^='oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-vertical .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-17.oxi-tab-header-horizontal[class*=' oxi-tab-header-bottom-'].oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-mobile-alignment-horizontal-vertical .oxi-tabs-header-li{
-         border-bottom: none !important;
+        border-bottom: none !important;
         border-left: none !important;
         border-right: none !important;
     }
