--- a/assets/frontend/style/style5.css
+++ b/assets/frontend/style/style5.css
@@ -1,3 +1,11 @@
+.oxi-tabs-ultimate-template-5.oxi-tab-header-vertical[class^='oxi-tab-header-left-'], 
+.oxi-tabs-ultimate-template-5.oxi-tab-header-vertical[class*=' oxi-tab-header-left-'],
+.oxi-tabs-ultimate-template-5.oxi-tab-header-vertical[class^='oxi-tab-header-right-'], 
+.oxi-tabs-ultimate-template-5.oxi-tab-header-vertical[class*=' oxi-tab-header-right-']{
+    align-items: stretch;
+}
+
+
 .oxi-tabs-ultimate-template-5 .oxi-tabs-header-li{
     position: relative;
 }  
