--- a/assets/frontend/style/style12.css
+++ b/assets/frontend/style/style12.css
@@ -1,4 +1,7 @@
 
+.oxi-tabs-ultimate-template-12 .oxi-tabs-ultimate-header{
+    overflow: visible;
+}
 .oxi-tabs-ultimate-template-12 .oxi-tabs-header-li{
     position: relative;
 }
