--- a/assets/frontend/style/style13.css
+++ b/assets/frontend/style/style13.css
@@ -1,4 +1,6 @@
-
+.oxi-tabs-ultimate-template-13 .oxi-tabs-ultimate-header{
+    overflow: visible;
+}
 @media only screen and (min-width: 769px) and (max-width: 993px) {
      .oxi-tabs-ultimate-template-13.oxi-tabs-heading-responsive-dynamic .oxi-tabs-header-li,
     .oxi-tabs-ultimate-template-13.oxi-tab-header-horizontal.oxi-tabs-heading-responsive-static.oxi-tabs-header-horizontal-tabs-alignment-horizontal-vertical .oxi-tabs-header-li,
